--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 
             <section>
               <div class="container">
-                <div class="row" id="cards"></div>
+                <div class="row" id="cards">
+                  
+                </div>
               </div>
             </section>
           </div>
