--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link
-      rel="styleshet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
     />
-    <link rel="styleshet" href="/Style.css" />
+    <link rel="stylesheet" href="./Style.css" />
   </head>
   <body>
     <div class="container">
@@ -30,9 +32,7 @@
 
             <section>
               <div class="container">
-                <div class="row" id="cards">
-                  
-                </div>
+                <div class="row" id="cards"></div>
               </div>
             </section>
           </div>
