--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
       </div>
     </div>
 
-    <script src="dist/main.js"></script>
+    <script src="/dist/main.js"></script>
   </body>
 </html>
